# tour_site

./: .env  celerybeat-schedule  pyproject.toml  req.txt
config/: __init__.py  celery.py  config.py  settings.py  urls.py
tour/: admin.py  filters.py  models.py  permissions.py  serializer.py  tasks.py  urls.py  views.py
tour/migrations/: 0001_initial.py  0002_tour_is_active.py  0003_remove_tour_user_booking_review.py  0004_alter_tour_price.py  0005_alter_booking_user.py  0006_rename_user_booking_author.py  0007_rename_author_booking_user.py  0008_rename_user_booking_author_rename_user_review_author.py  0009_tourgroupdetail_tourthemes_tourtype_and_more.py  0010_remove_booking_author_remove_tour_car_and_more.py  0011_remove_car_photo_remove_tour_image_and_more.py
user/: models.py  serializer.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_activation_code.py
